create slide show and js for slide show

--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
         </div>
     </div>
 <!--    End Header-->
+<!--    Begin SlideShow-->
+    <div id="slideShow">
+        <div class="container position-relative">
+            <img class="mySlides" src="image/slideshow/cyberpunk-city.jpg" alt="">
+            <img class="mySlides" src="image/slideshow/nature.jpg" alt="">
+            <img class="mySlides" src="image/slideshow/sky.jpg" alt="">
+
+            <!--            <div class="leftSlide"><i class="fa-solid fa-angles-left"></i></div>-->
+<!--            <span class="rightSlide"><i class="fa-solid fa-angles-right"></i></span>-->
+            <div class="dotList">
+                <span class="dot" onclick="currentDiv(1)"></span>
+                <span class="dot" onclick="currentDiv(2)"></span>
+                <span class="dot" onclick="currentDiv(3)"></span>
+            </div>
+        </div>
+    </div>
+<!--    End SlideShow-->
 <!--    Begin Content-->
     <div id="content" style="height: 50vh">
 
