Add logo and edit footer contents

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container pt-3">
             <div class="menu row">
                 <div class="col-2">
-                    <img src="image/logoShop.psd" alt="logo">
+                    <img src="image/logoShopKey.png" alt="logo">
                 </div>
                 <div class="col-8">
                     <ul class="drop-menu">
@@ -86,18 +86,15 @@
                     <p><i class="fa-solid fa-house"></i> Đại học Nông Lâm TpHCM</p>
                     <p><i class="fa-solid fa-envelope"></i> 20130260@st.hcmuaf.edu.vn</p>
                     <p><i class="fa-solid fa-phone"></i> 0852995378</p>
-                    <p>Chịu trách nhiệm website: .... <br>
-                        Email: ....
-                    </p>
                 </div>
             </div>
             <div class="product-footer">
                 <div class="big-title-footer"><h4>SẢN PHẨM</h4></div>
-                <p>Window</p>
-                <p>Window Server</p>
-                <p>Office</p>
+                <p>Windows</p>
+                <p>Microsoft Office</p>
                 <p>Anti Virus</p>
                 <p>SQL Server</p>
+                <p>Adobe</p>
             </div>
             <div class="policy">
                 <div class="big-title-footer"><h4>CHÍNH SÁCH</h4></div>
@@ -117,7 +114,7 @@
         </div>
         <div class="copy-right p-2">
             <div class="container">
-                <p class="mb-0"><i class="fa-regular fa-copyright mr-2"></i>Bản quyền thuộc về ....</p>
+                <p class="mb-0"><i class="fa-regular fa-copyright mr-2"></i>Bản quyền thuộc về Hạc Key Shop</p>
             </div>
         </div>
     </div>
