Code contact site

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 </div>
                 <div class="col-8">
                     <ul class="drop-menu">
-                        <li class="menu-item"><a class="p-3" href="/index.html">Trang Chủ</a></li>
+                        <li class="menu-item"><a class="p-3" href="index.html">Trang Chủ</a></li>
                         <li class="menu-item"><a class="p-3" href="#">Sản Phẩm</a></li>
                         <li class="menu-item"><a class="p-3" href="#">Giới Thiệu</a></li>
-                        <li class="menu-item"><a class="p-3" href="#">Liên Hệ</a></li>
+                        <li class="menu-item"><a class="p-3" href="contact.html">Liên Hệ</a></li>
                     </ul>
                 </div>
                 <div class="menu-right col-2">
