edit css and js search bar

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                     <span class="icon-item search">
                         <a id="icon-search" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
                         <div id="search-container">
+                            <p class="title-in-search text-center">TÌM KIẾM</p>
                             <div class="box-search d-flex">
                                 <input type="search" placeholder="Nhập tìm kiếm ở đây">
-                                <button class="btn-search">Tìm Kiếm</button>
+                                <button class="btn-search"><i class="fa-solid fa-magnifying-glass"></i></button>
                                 <button class="btn-close"><i class="fa-solid fa-xmark"></i></button>
                             </div>
                         </div>
