a little edit header footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="menu-right col-2">
                     <span class="icon-item search">
-                        <a id="icon-search" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        <span id="icon-search"><i class="fa-solid fa-magnifying-glass"></i></span>
                         <div id="search-container">
                             <p class="title-in-search text-center">TÌM KIẾM</p>
                             <div class="box-search d-flex">
@@ -45,11 +45,11 @@
                         </div>
                     </span>
                     <span class="icon-item">
-                        <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                        <span><i class="fa-solid fa-bag-shopping"></i></span>
                         <span>0</span>
                     </span>
                     <span class="icon-item">
-                        <a href="#"><i class="fa-regular fa-user"></i></a>
+                        <span><i class="fa-regular fa-user"></i></span>
                     </span>
                 </div>
             </div>
