create css js button back to top, split js slide show into a new file

--- a/contact.html
+++ b/contact.html
@@ -11,56 +11,55 @@
 <body>
 
 <div id="main">
-  <!--    Begin Header-->
-  <div id="header">
-    <div class="config-top-banner">
-      <p class="slogan text-center font-weight-bold p-2 mb-0">
-        Xài Key bản quyền
-        <span class="icon-slogan mr-1 ml-1">
+    <!--    Begin Header-->
+    <div id="header">
+        <div class="config-top-banner">
+            <p class="slogan text-center font-weight-bold p-2 mb-0">
+                Xài Key bản quyền
+                <span class="icon-slogan mr-1 ml-1">
                             <i class="fa-sharp fa-solid fa-key"></i>
                         </span>, nói không với crack!
-      </p>
-    </div>
-    <div class="container pt-3">
-      <div class="menu row">
-        <div class="col-2">
-          <img src="image/logoShopKey.png" alt="logo">
+            </p>
         </div>
-        <div class="col-8">
-          <ul class="drop-menu">
-            <li class="menu-item"><a class="p-3" href="index.html">Trang Chủ</a></li>
-            <li class="menu-item"><a class="p-3" href="#">Sản Phẩm</a></li>
-            <li class="menu-item"><a class="p-3" href="#">Giới Thiệu</a></li>
-            <li class="menu-item"><a class="p-3" href="#">Liên Hệ</a></li>
-          </ul>
-        </div>
-        <div class="menu-right col-2">
+        <div class="container pt-3">
+            <div class="menu row">
+                <div class="col-2">
+                    <img src="image/logoShopKey.png" alt="logo">
+                </div>
+                <div class="col-8">
+                    <ul class="drop-menu">
+                        <li class="menu-item"><a class="p-3" href="index.html">Trang Chủ</a></li>
+                        <li class="menu-item"><a class="p-3" href="#">Sản Phẩm</a></li>
+                        <li class="menu-item"><a class="p-3" href="#">Giới Thiệu</a></li>
+                        <li class="menu-item"><a class="p-3" href="contact.html">Liên Hệ</a></li>
+                    </ul>
+                </div>
+                <div class="menu-right col-2">
                     <span class="icon-item search">
-                        <a id="icon-search" href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                        <span id="icon-search"><i class="fa-solid fa-magnifying-glass"></i></span>
                         <div id="search-container">
+                            <p class="title-in-search text-center">TÌM KIẾM</p>
                             <div class="box-search d-flex">
                                 <input type="search" placeholder="Nhập tìm kiếm ở đây">
-                                <button class="btn-search">Tìm Kiếm</button>
+                                <button class="btn-search"><i class="fa-solid fa-magnifying-glass"></i></button>
                                 <button class="btn-close"><i class="fa-solid fa-xmark"></i></button>
                             </div>
                         </div>
                     </span>
-          <span class="icon-item">
-                        <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+                    <span class="icon-item">
+                        <span><i class="fa-solid fa-bag-shopping"></i></span>
                         <span>0</span>
                     </span>
-          <span class="icon-item">
-                        <a href="#"><i class="fa-regular fa-user"></i></a>
+                    <span class="icon-item">
+                        <span><i class="fa-regular fa-user"></i></span>
                     </span>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <!--    End Header-->
-
+    <!--    End Header-->
     <!--Content Begin-->
-
-    <div id="content" style="height: 70vh">
+    <div id="content" style="margin-top: 122px">
         <!--Contact area start-->
         <div class="contact_area">
             <div class="container">
@@ -68,11 +67,15 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="contact_message content">
                             <h3>Liên hệ với chúng tôi</h3>
-                            <p>Nếu bạn có bất cứ vấn đề hoặc thắc mắc nào có thể phản hồi với chúng tôi qua các cách thức liên lạc bên dưới.</p>
+                            <p>Nếu bạn có bất cứ vấn đề hoặc thắc mắc nào có thể phản hồi với chúng tôi qua các cách
+                                thức liên lạc bên dưới.</p>
                             <p>Hoặc có thể điền vào biểu mẫu bên cạnh để mô tả sơ lược về vấn đề mà bạn gặp phải.</p>
                             <ul>
-                                <li><i class="fa fa-fax"></i> Địa chỉ liên hệ: Khu phố 6, phường Linh Trung, TP. Thủ Đức, TP.HCM</li>
-                                <li><i class="fa-solid fa-envelope"></i> Email nhận phản hồi: 20130260@st.hcmuaf.edu.vn</li>
+                                <li><i class="fa fa-fax"></i> Địa chỉ liên hệ: Khu phố 6, phường Linh Trung, TP. Thủ
+                                    Đức, TP.HCM
+                                </li>
+                                <li><i class="fa-solid fa-envelope"></i> Email nhận phản hồi: 20130260@st.hcmuaf.edu.vn
+                                </li>
                                 <li><i class="fa fa-phone"></i> Số điện thoại liên lạc: 0852995378</li>
                             </ul>
                         </div>
@@ -86,16 +89,16 @@
                                     <input name="name" placeholder="Họ và tên*" type="text">
                                 </p>
                                 <p>
-                                    <label>  Địa chỉ email (bắt buộc)</label>
+                                    <label> Địa chỉ email (bắt buộc)</label>
                                     <input name="email" placeholder="Địa chỉ email*" type="email">
                                 </p>
                                 <p>
-                                    <label>  Số điện thoại</label>
+                                    <label> Số điện thoại</label>
                                     <input name="subject" placeholder="Số điện thoại" type="text">
                                 </p>
                                 <div class="contact_textarea">
-                                    <label>  Mô tả vấn đề (bắt buộc)</label>
-                                    <textarea placeholder="Mô tả*" name="message"  class="form-control2" ></textarea>
+                                    <label> Mô tả vấn đề (bắt buộc)</label>
+                                    <textarea placeholder="Mô tả*" name="message" class="form-control2"></textarea>
                                 </div>
                                 <button type="submit"> Gửi</button>
                                 <p class="form-messege"></p>
@@ -112,67 +115,67 @@
         <div class="map">
             <div class="map_location">
                 <h3>Vị trí trên bản đồ:</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.214525476974!2d106.78957301590339!3d10.87128166040572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276398969f7b%3A0x9672b7efd0893fc4!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBOw7RuZyBMw6JtIFRwLiBI4buTIENow60gTWluaA!5e0!3m2!1svi!2s!4v1666705870481!5m2!1svi!2s" width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.214525476974!2d106.78957301590339!3d10.87128166040572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175276398969f7b%3A0x9672b7efd0893fc4!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBOw7RuZyBMw6JtIFRwLiBI4buTIENow60gTWluaA!5e0!3m2!1svi!2s!4v1666705870481!5m2!1svi!2s"
+                        width="1200" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <!--Map Location End-->
-
+    </div>
     <!--    End Content-->
-
-  <!--    Begin Footer-->
-  <div id="footer">
-    <div class="container d-flex justify-content-sm-between">
-      <div class="about-us-footer">
-        <div class="big-title-footer"><h4>THÔNG TIN LIÊN HỆ</h4></div>
-        <div class="address">
-          <p><i class="fa-solid fa-house"></i> Đại học Nông Lâm TpHCM</p>
-          <p><i class="fa-solid fa-envelope"></i> 20130260@st.hcmuaf.edu.vn</p>
-          <p><i class="fa-solid fa-phone"></i> 0852995378</p>
+    <!--    Begin Footer-->
+    <div id="footer">
+        <div class="container d-flex justify-content-sm-between">
+            <div class="about-us-footer">
+                <div class="big-title-footer"><h4>THÔNG TIN LIÊN HỆ</h4></div>
+                <div class="address">
+                    <p><i class="fa-solid fa-house"></i> Đại học Nông Lâm TpHCM</p>
+                    <p><i class="fa-solid fa-envelope"></i> 20130260@st.hcmuaf.edu.vn</p>
+                    <p><i class="fa-solid fa-phone"></i> 0852995378</p>
+                </div>
+            </div>
+            <div class="product-footer">
+                <div class="big-title-footer"><h4>SẢN PHẨM</h4></div>
+                <p>Windows</p>
+                <p>Microsoft Office</p>
+                <p>Anti Virus</p>
+                <p>SQL Server</p>
+                <p>Adobe</p>
+            </div>
+            <div class="policy">
+                <div class="big-title-footer"><h4>CHÍNH SÁCH</h4></div>
+                <p>Chính sách thanh toán</p>
+                <p>Chính sách bảo hành</p>
+                <p>Chính sách đổi trả</p>
+                <p>Chính sách bảo mật</p>
+            </div>
+            <div class="social">
+                <div class="big-title-footer"><h4>XÃ HỘI</h4></div>
+                <div class="social-icon">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="product-footer">
-        <div class="big-title-footer"><h4>SẢN PHẨM</h4></div>
-        <p>Windows</p>
-        <p>Microsoft Office</p>
-        <p>Anti Virus</p>
-        <p>SQL Server</p>
-        <p>Adobe</p>
-      </div>
-      <div class="policy">
-        <div class="big-title-footer"><h4>CHÍNH SÁCH</h4></div>
-        <p>Chính sách thanh toán</p>
-        <p>Chính sách bảo hành</p>
-        <p>Chính sách đổi trả</p>
-        <p>Chính sách bảo mật</p>
-      </div>
-      <div class="social">
-        <div class="big-title-footer"><h4>XÃ HỘI</h4></div>
-        <div class="social-icon">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <div class="copy-right p-2">
+            <div class="container">
+                <p class="mb-0"><i class="fa-regular fa-copyright mr-2"></i>Bản quyền thuộc về Hạc Key Shop</p>
+            </div>
         </div>
-      </div>
     </div>
-    <div class="copy-right p-2">
-      <div class="container">
-        <p class="mb-0"><i class="fa-regular fa-copyright mr-2"></i>Bản quyền thuộc về Hạc Key Shop</p>
-      </div>
+    <!--    End Footer-->
+    <!--    Begin Back to top-->
+    <div id="back-to-top">
+        <a class="link-btt" href="#main"><i class="fa-sharp fa-solid fa-arrow-up"></i></a>
     </div>
-  </div>
-  <!--    End Footer-->
-    </div>
-        <div id="back-to-top">
-
-        </div>
+    <!--    End Back to top-->
 </div>
 
 <!--    Script-->
 <script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
-
-
 
 
 </body>
