--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="main">
-<!--    Begin Header-->
+    <!--    Begin Header-->
     <div id="header">
         <div class="config-top-banner">
             <p class="slogan text-center font-weight-bold p-2 mb-0">
@@ -55,16 +55,14 @@
             </div>
         </div>
     </div>
-<!--    End Header-->
-<!--    Begin SlideShow-->
+    <!--    End Header-->
+    <!--    Begin SlideShow-->
     <div id="slideShow">
         <div class="container position-relative">
             <img class="mySlides" src="image/slideshow/cyberpunk-city.jpg" alt="">
             <img class="mySlides" src="image/slideshow/nature.jpg" alt="">
             <img class="mySlides" src="image/slideshow/sky.jpg" alt="">
 
-            <!--            <div class="leftSlide"><i class="fa-solid fa-angles-left"></i></div>-->
-<!--            <span class="rightSlide"><i class="fa-solid fa-angles-right"></i></span>-->
             <div class="dotList">
                 <span class="dot" onclick="currentDiv(1)"></span>
                 <span class="dot" onclick="currentDiv(2)"></span>
@@ -72,13 +70,13 @@
             </div>
         </div>
     </div>
-<!--    End SlideShow-->
-<!--    Begin Content-->
-    <div id="content" style="height: 50vh">
+    <!--    End SlideShow-->
+    <!--    Begin Content-->
+    <div id="content" style="height: 100px">
 
     </div>
-<!--    End Content-->
-<!--    Begin Footer-->
+    <!--    End Content-->
+    <!--    Begin Footer-->
     <div id="footer">
         <div class="container d-flex justify-content-sm-between">
             <div class="about-us-footer">
@@ -119,9 +117,14 @@
             </div>
         </div>
     </div>
-<!--    End Footer-->
+    <!--    End Footer-->
+    <!--    Begin Back to top-->
+    <div id="back-to-top">
+        <a class="link-btt" href="#main"><i class="fa-sharp fa-solid fa-arrow-up"></i></a>
+    </div>
+    <!--    End Back to top-->
 </div>
-<div id="back-to-top">
+<div id="signIn-signUp">
 
 </div>
 
@@ -129,5 +132,8 @@
 <script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/slideShow.js"></script>
+
+
 </body>
 </html>
