--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span>0</span>
                     </span>
                     <span class="icon-item">
-                        <span><i class="fa-regular fa-user"></i></span>
+                        <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"></i></span>
                     </span>
                 </div>
             </div>
@@ -124,9 +124,81 @@
     </div>
     <!--    End Back to top-->
 </div>
-<div id="signIn-signUp">
-
+<!--Begin Login-->
+<div id="login">
+    <!-- Modal -->
+    <div class="modal fade pt-5" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content pl-3 pr-3" style="background: #efefef">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Đăng nhập để tiếp tục</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="body-container">
+                        <div class="choose d-flex">
+                            <div class="sign-in-choose w-50 text-center">Đăng nhập</div>
+                            <div class="sign-up-choose w-50 text-center">Đăng kí</div>
+                        </div>
+                        <div class="sign-in-container">
+                            <form action="">
+                                <div class="input-information">
+                                    <i class="fa-solid fa-user"></i>
+                                    <input type="text" name="uname" placeholder="Tài khoản hoặc Email">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-lock"></i>
+                                    <input type="password" name="pass" placeholder="Mật khẩu">
+                                </div>
+                            </form>
+                            <div class="remember-forgot">
+                                <div class="remember">
+                                    <input type="checkbox" name="check">Nhớ mật khẩu
+                                </div>
+                                <a href="#">Quên mật khẩu</a>
+                            </div>
+                            <div class="btn-login-container">
+                                <button class="btn-login btn-sign-in" type="button">Đăng nhập</button>
+                            </div>
+                        </div>
+                        <div class="sign-up-container">
+                            <form action="">
+                                <div class="input-information">
+                                    <i class="fa-solid fa-envelope"></i>
+                                    <input type="email" name="email-sign-up" placeholder="Email">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-phone"></i>
+                                    <input type="number" name="phone-sign-up" placeholder="Số điện thoại">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-lock"></i>
+                                    <input type="password" name="pass-sign-up" placeholder="Mật khẩu">
+                                </div>
+                                <div class="input-information">
+                                    <i class="fa-solid fa-lock"></i>
+                                    <input type="password" name="pass-sign-up" placeholder="Nhập lại mật khẩu">
+                                </div>
+                            </form>
+                            <div class="btn-login-container">
+                                <button class="btn-login btn-sign-up" type="button">Đăng ký</button>
+                            </div>
+                        </div>
+                        <p class="text-center">Hoặc</p>
+                        <div class="login-with">
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-google"></i></a>
+                            <a href="#"><i class="fa-brands fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<!--End Login-->
 
 <!--    Script-->
 <script src="js/jquery-3.6.1.min.js"></script>
