--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         <span>0</span>
                     </span>
                     <span class="icon-item">
-                        <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"></i></span>
+                        <span><i class="fa-regular fa-user" class="btn btn-primary" data-toggle="modal"
+                                 data-target="#exampleModal"></i></span>
                     </span>
                 </div>
             </div>
@@ -72,8 +73,189 @@
     </div>
     <!--    End SlideShow-->
     <!--    Begin Content-->
-    <div id="content" style="height: 100px">
+    <div id="content">
+        <div class="container pt-4 d-flex justify-content-center row m-auto">
+            <div class="brand col-lg-2">
+                <a href="">
+                    <img src="image/brand/office-365.png" alt="">
+                    <p>Window</p>
+                </a>
+            </div>
+            <div class="brand col-lg-2">
+                <a href="">
+                    <img src="image/brand/adobe.png" alt="">
+                    <p>Adobe</p>
+                </a>
+            </div>
+            <div class="brand col-lg-2">
+                <a href="">
+                    <img src="image/brand/office-365.png" alt="">
+                    <p>Office</p>
+                </a>
+            </div>
+            <div class="brand col-lg-2">
+                <a href="">
+                    <img src="image/brand/google.png" alt="">
+                    <p>Google</p>
+                </a>
+            </div>
+            <div class="brand col-lg-2">
+                <a href="">
+                    <img src="image/brand/phan-mem.png" alt="">
+                    <p>Phầm mềm</p>
+                </a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="products-new">
+                <div class="product-title d-flex justify-content-between">
+                    <h3 class="section-title"><i class="fa-solid fa-bolt"></i>Sản Phẩm Mới</h3>
+                    <a class="more-product" href="">Xem thêm</a>
+                </div>
+                <div class="products">
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+            <div class="products-trend">
+                <div class="product-title d-flex justify-content-between">
+                    <h3 class="section-title"><i class="fa-solid fa-arrow-trend-up"></i>Sản Phẩm Thịnh Hành</h3>
+                    <a class="more-product" href="">Xem thêm</a>
+                </div>
+                <div class="products">
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                    <div class="product-item">
+                        <img class="product-image" src="image/slideshow/nature.jpg" alt="">
+                        <p class="product-type">Windows</p>
+                        <p class="product-name">Windows 10 (Home/Edu/Pro)</p>
+                        <span class="product-price">100.000</span><span class="currency">VND</span>
+                        <div class="product-choose">
+                            <button class="add-to-cart"><i class="fa-solid fa-cart-plus"></i></button>
+                            <button class="detail"><a href="#"><i class="fa-solid fa-circle-info"></i></a></button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
     <!--    End Content-->
     <!--    Begin Footer-->
